# mopack

./: .coveragerc  .gitignore  CHANGES.md  LICENSE  README.md  mkdocs.yml  setup.cfg  setup.py  versions.json
.github/workflows/: build.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/search/: search_index.json
0.2/: 404.html  index.html
0.2/search/: search_index.json
dev/: 404.html  index.html  sitemap.xml
dev/css/: extra.css
dev/search/: search_index.json
doc/: index.md
doc/about/: changes.md  license.md
doc/css/: extra.css
doc/reference/: builders.md  command-line.md  environment-vars.md  expressions.md  file-structure.md  linkage.md  packages.md  sources.md  usage.md
doc/user/: resolving.md  writing.md
latest/css/: extra.css
latest/search/: search_index.json
mopack/: archive.py  arguments.py  base_options.py  commands.py  config.py  dependencies.py  driver.py  environment.py  expression.py  freezedried.py  iterutils.py  log.py  metadata.py  objutils.py  options.py  package_defaults.py  path.py  pkg_config.py  placeholder.py  platforms.py  shell.py  types.py  yaml_loader.py  yaml_tools.py
mopack/builders/: __init__.py  b2.py  bfg9000.py  cmake.py  custom.py  ninja.py  none.py
mopack/defaults/: Qt5.yml  boost.yml  gl.yml  glu.yml  glut.yml  pthread.yml  (+1 more)
scripts/: mopack.cmake
test/: __init__.py
test/data/greeter-cmake/: CMakeLists.txt  mopack.cmake  mopack.yml
test/data/greeter-cmake/include/: greeter.hpp
test/data/hello-cmake/: CMakeLists.txt
test/data/hello-cmake/include/: hello.hpp
test/data/hello-cmake/src/: hello.cpp
(+197 files in other folders)
